# cgc_claude_usage_nas

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/cgc_claude_usage/: __init__.py  __main__.py  config.py  main.py  storage.py
src/cgc_claude_usage/services/: admin_api.py  claude_web.py  deepl_api.py  fetch_service.py  openrouter_api.py
src/cgc_claude_usage/ui/: dashboard_tab.py  settings_tab.py  trends_tab.py
tests/: test_config.py  test_fetch.py  test_storage.py
